--- a/CSS/css_layout/challenge/day10/index.html
+++ b/CSS/css_layout/challenge/day10/index.html
@@ -10,37 +10,51 @@
     <main>
       <section id="left">
         <div class="item">
-          <div class="short">E-Commerce</div>
+          <div class="short">
+            <span>E-Commerce</span>
+          </div>
           <div class="title">UNIF</div>
           <div class="madeby">Design & Development</div>
           <div class="time">2014 → Present</div>
         </div>
         <div class="item">
-          <div class="short">Event</div>
-          <div class="title">Veuve Clicquot</div>
+          <div class="short">
+            <span>Event</span>
+          </div>
+          <div class="title">
+            <span>Veuve Clicquot</span>
+          </div>
           <div class="madeby">Website, Initiative Identities</div>
           <div class="time">2015 → Present</div>
         </div>
         <div class="item">
-          <div class="short">Artist</div>
+          <div class="short">
+            <span>Artist</span>
+          </div>
           <div class="title">HAIM</div>
           <div class="madeby">Visual Identity, Digital Strategy, Design & Development</div>
           <div class="time">2014 → Forever</div>
         </div>
         <div class="item">
-          <div class="short">Institutional</div>
+          <div class="short">
+            <span>Institutional</span>
+          </div>
           <div class="title">MOCA</div>
           <div class="madeby">Streaming Platform</div>
           <div class="time">2016</div>
         </div>
         <div class="item">
-          <div class="short">Studio Project</div>
+          <div class="short">
+            <span>Studio Project</span>
+          </div>
           <div class="title">Public Access</div>
           <div class="madeby">Website, Streaming Platform, Programming</div>
           <div class="time">2015 → Forever</div>
         </div>
         <div class="item">
-          <div class="short">Musician</div>
+          <div class="short">
+            <span>Musician</span>
+          </div>
           <div class="title">Kelela</div>
           <div class="madeby">Interactive Microsite</div>
           <div class="time">2015</div>
@@ -48,9 +62,13 @@
       </section>
       <section id="right">
         <div class="side">
-          <div class="madeby"></div>
-          <div class="icon"></div>
-          <div class="time">ⓒ2014 → Forever</div>
+          <div class="madeby">
+            <span>Special ─ Offer, Inc.</span>
+          </div>
+          <div class="icon">★</div>
+          <div class="time">
+            <span>ⓒ2014 → Forever</span>
+          </div>
         </div>
         <div class="select">
           <div class="information">
